Express server to serve static pages

--- a/public/css/cover.css
+++ b/public/css/cover.css
@@ -173,3 +173,11 @@ body {
   margin-left: auto;
   position: relative;
 }
+
+textarea, input {
+  border-radius: 0px;
+}
+
+.input-group-addon {
+  border-radius: 0px;  
+}
